[package]
name = "krypton"
authors = ["Clara Carrasquel Fiorini"]
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.2"
chacha20poly1305 = "0.10.1"
pbkdf2 = "0.12.2"
sha3 = "0.10.8"
rand_core = "0.6.4"
serde = { version = "1.0.175", features = ["derive"] }
base64 = "0.21.2"
bincode = "1.3.3"
